For external data sources this variable can be null, fdo#83534

Change-Id: I8c47cf078b4772fcdba0993880740c22114f1b45
Reviewed-on: https://gerrit.libreoffice.org/13238
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>